修正逻辑，优化代码